[package]
name = "station_iapetus"
version = "0.4.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
rg3d = { path = "../rg3d" }
ron = "0.6.4"
serde = "^1.0.0"

[profile.release]
opt-level = 3
debug = true

[features]
enable_profiler = ["rg3d/enable_profiler"]