[package]
name = "station_iapetus"
version = "0.4.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
fyrox = { path = "../fyrox" }
ron = "0.7.0"
serde = "^1.0.0"

[profile.release]
opt-level = 3
debug = true

[features]
enable_profiler = ["fyrox/enable_profiler"]